do/k8s/templates/DefaultIngress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: monitoring
  annotations:
    nginx.ingress.kubernetes.io/whitelist-source-range: 45.148.138.18/32
spec:
  rules:
  - host: grafana.hadii.com
    http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: kube-prometheus-stack-grafana
              port:
                number: 80
  - host: prom.hadii.com
    http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: kube-prometheus-stack-prometheus
              port:
                number: 9090
